Changelog for Tic-Tac-Toe

2013-04-08 19:20:31 -0400    Fixed the command line run command. (Jenny Zhen)
2013-04-08 19:19:15 -0400    Fixed the formatting. (Jenny Zhen)
2013-04-08 19:08:06 -0400    Added the total time spent to the project metrics. (Jenny Zhen)
2013-04-08 18:44:57 -0400    Completed ReadMe. (Jenny Zhen)
2013-04-08 17:54:53 -0400    Fixed the formatting in the Table of Contents. (Jenny Zhen)
2013-04-08 17:52:03 -0400    Moved README to root of project. (Jenny Zhen)
2013-04-08 17:49:57 -0400    Included player information and basics of minimax. (Jenny Zhen)
2013-04-08 17:39:09 -0400    Removed debug print messages.  Finished writing tests for GoodAIPlayer. (Jenny Zhen)
2013-04-08 17:25:43 -0400    Fixed a bug in the AI where it was not calling minimizeScore after calling maximizeScore. AI now plays correctly. (Jenny Zhen)
2013-04-08 17:13:40 -0400    Rename README.MD to README.md (Jenny Zhen)
2013-04-08 17:12:46 -0400    Rename README.txt to README.MD (Jenny Zhen)
2013-04-08 17:10:07 -0400    Included instructions for options on how to run the game and the dependencies. (Jenny Zhen)
2013-04-08 16:55:36 -0400    Added a README that describes the basics of the projects so far. (Jenny Zhen)
2013-04-08 11:57:22 -0400    GoodAIPlayer does not pass the second test. (Jenny Zhen)
2013-04-08 03:47:40 -0400    Added documentation/comments to all files. (Jenny Zhen)
2013-04-08 00:50:36 -0400    Worked on GoodPlayer to implement a minmax algorithm. (Jenny Zhen)
2013-04-07 22:15:06 -0400    RandomAI and GoodAI both pass all unit tests to play a total of 3 games. (Jenny Zhen)
2013-04-07 19:59:04 -0400    Worked on GoodPlayer's algorithm for determining the 1st and 2nd moves in the game. (Jenny Zhen)
2013-04-07 18:32:36 -0400    OkayPlayer can choose moves adjacent to previous moves it made. (Jenny Zhen)
2013-04-07 18:24:32 -0400    Checking for a win displays direction of win (row, column, diagonal) or a tie. Started on OkayPlayer. (Jenny Zhen)