@@ -29,6 +29,17 @@
 
 	<table class="changelog">
 		<tbody>
+		<tr><td class="date">2013-04-09 09:17:22 -0400</td><td>Updated ideas for future revisions.</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-09 09:14:28 -0400</td><td>Updated metrics to factor in the ReadMe.</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-09 09:09:58 -0400</td><td>Updated the conclusion for the ReadMe.</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-09 09:00:59 -0400</td><td>Updated pom.xml.</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-09 08:55:08 -0400</td><td>Updated comments in Player.</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-09 08:46:45 -0400</td><td>Added a comment to chooseMove().</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-09 08:45:44 -0400</td><td>Update OkayAIPlayer.java</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-09 08:41:52 -0400</td><td>Added range check on user input.</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-09 08:36:42 -0400</td><td>Added lines of product and test code.</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-08 20:06:33 -0400</td><td>Fixed the numbering.</td><td><span class="committer">Jenny Zhen</span></td></tr>
+		<tr><td class="date">2013-04-08 19:48:06 -0400</td><td>Added the .jar, changelog.txt, and changelog.html.</td><td><span class="committer">Jenny Zhen</span></td></tr>
 		<tr><td class="date">2013-04-08 19:20:31 -0400</td><td>Fixed the command line run command.</td><td><span class="committer">Jenny Zhen</span></td></tr>
 		<tr><td class="date">2013-04-08 19:19:15 -0400</td><td>Fixed the formatting.</td><td><span class="committer">Jenny Zhen</span></td></tr>
 		<tr><td class="date">2013-04-08 19:08:06 -0400</td><td>Added the total time spent to the project metrics.</td><td><span class="committer">Jenny Zhen</span></td></tr>
